# MCP_Harvard_PrimeKG

./: .gitignore  CONFIGURATION_GUIDE.md  LICENSE  NEO4J_IMPORT_GUIDE.md  README.md  SETUP.md  pyproject.toml
.github/workflows/: publish.yml
scr/mcp_primekg/: primekg_client.py  server.py
src/mcp_primekg/: __init__.py  primekg_client.py
