[project]
name = "mcp-primekg"
version = "0.1.0"
description = "MCP Server for Harvard PrimeKG Precision Medicine Knowledge Graph"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Amanda Saravia-Butler", email = "amanda.saravia-butler@nasa.gov" }
]
keywords = ["mcp", "primekg", "knowledge-graph", "precision-medicine", "biomedical", "spoke-okn", "spoke-genelab"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.1.0",
    "pandas>=2.0.0",
    "neo4j>=5.14.0",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/asaravia-butler/MCP_Harvard_PrimeKG"
Repository = "https://github.com/asaravia-butler/MCP_Harvard_PrimeKG"
Documentation = "https://github.com/asaravia-butler/MCP_Harvard_PrimeKG#readme"
Issues = "https://github.com/asaravia-butler/MCP_Harvard_PrimeKG/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
mcp-primekg = "mcp_primekg:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_primekg"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
